# assistiveGoggles

./: CMakeLists.txt  main.cpp
include/: CameraManager.h  Communication.h  InputListener.h  Navigation.h  SensorManager.h
src/: CameraManager.cpp  Communication.cpp  InputListener.cpp  Navigation.cpp  SensorManager.cpp
